--- a/V47/content/diskussion.tex
+++ b/V47/content/diskussion.tex
@@ -1,2 +1,13 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+
+blablabla\\
+
+Der Vergleich des Mittelwerts der experimentell ermittelten Debye-Tempartur $\bar{\theta_\text{D}}$ mit dem Theoriewert 
+$\theta_\text{D,theo.}$ liefert mit 
+
+\begin{equation*}
+    x = \frac{|\theta_\text{D,theo.}-\bar{\theta_\text{D}}|}{|\theta_\text{D,theo.}|}\cdot \SI{100}{\percent}
+\end{equation*}
+
+einen relativen Fehler von... was unter unter Berücksichtungung der Messfehler ein akzeptables Ergebnis ist. 
