--- a/V47/content/durchfuehrung.tex
+++ b/V47/content/durchfuehrung.tex
@@ -1,2 +1,7 @@
 \section{Durchführung}
 \label{sec:Durchführung}
+
+\begin{equation}
+    T = 0.00134 R^2 + 2.296 R - 243.02
+    \label{eqn:Temp}
+\end{equation}
