--- a/V47/content/theorie.tex
+++ b/V47/content/theorie.tex
@@ -1,4 +1,19 @@
 \section{Theorie}
 \label{sec:Theorie}
 
-\cite{sample}
+\begin{equation}
+    C_p - C_V = 9\alpha^2\kappa V_0 T
+    \label{eqn:Umrechnung}
+\end{equation}
+
+\subsection{Debye-Modell}
+
+\begin{equation}
+    \int_0^{w_D} Z\left(w\right)\text{d}w = 3N
+    \label{eqn:Natome}
+\end{equation}
+
+\begin{equation}
+    \theta_\text{D} = \frac{\hbar w_\text{D}}{k_\text{B}} = \frac{\hbar v_\text{s}}{k_\text{B}}\left(\frac{6\pi^2N}{L^3}\right)^{\frac{3}{2}}
+    \label{eqn:Debye}
+\end{equation}
