--- a/V47/header.tex
+++ b/V47/header.tex
@@ -125,15 +125,16 @@
 ]{hyperref}
 % erweiterte Bookmarks im PDF
 \usepackage{bookmark}
+\setlength{\parindent}{0em}
 
 % Trennung von Wörtern mit Strichen
 \usepackage[shortcuts]{extdash}
 
 \author{%
-  AUTOR A\\%
-  \href{mailto:authorA@udo.edu}{authorA@udo.edu}%
+  Sara Krieg\\%
+  \href{mailto:sara.krieg@udo.edu}{sara.krieg@udo.edu}%
   \texorpdfstring{\and}{,}%
-  AUTOR B\\%
-  \href{mailto:authorB@udo.edu}{authorB@udo.edu}%
+  Marek KArzel\\%
+  \href{mailto:marek.karzel@udo.edu}{marek.karzel@udo.edu}%
 }
 \publishers{TU Dortmund – Fakultät Physik}
