--- a/V47/lit.bib
+++ b/V47/lit.bib
@@ -1,5 +1,19 @@
-@manual{sample,
+@manual{Anleitung,
   author = {TU Dortmund},
-  title = {Versuch zum Literaturverzeichnis},
-  year = 2014
+  title = {Versuch 47 - Temperaturabhängigkeit der Molwärme von Festkörpern},
+  year = 2020
+}
+
+@misc{Molare,
+  author = {Lenntech},
+  title = {Kupfer(CU)},
+  url = {https://www.lenntech.de/pse/elemente/cu.htm},
+  year = 2020
+}
+
+@misc{KompDichte,
+  author = {Rene Rausch},
+  title = {29, Kupfer(CU)},
+  url = {http://www.periodensystem-online.de/index.php?el=29&id=modify},
+  year = 2020
 }
