--- a/V47/main.tex
+++ b/V47/main.tex
@@ -1,11 +1,11 @@
 \input{header.tex}
 
-\subject{VERSUCH NUMMER}
-\title{TITEL}
+\subject{Nr. 47}
+\title{Temperaturabhängigkeit der Molwärme von Festkörpern}
 \date{%
-  Durchführung: DATUM
+  Durchführung: 22.06.2020
   \hspace{3em}
-  Abgabe: DATUM
+  Abgabe: ??
 }
 
 \begin{document}
