--- a/V47/content/diskussion.tex
+++ b/V47/content/diskussion.tex
@@ -1,7 +1,9 @@
 \section{Diskussion}
 \label{sec:Diskussion}
 
-blablabla\\
+Zunächst ist zu erwähnen, dass während der Messung ein großer Fehler gemacht wurde. Es wurde vergessen, das Helium abzupumpen. Dieses leitet 
+Wärme sehr gut und sollte die Abkühlung beschleunigen. Dadurch, dass das Helium nicht abgepumpt worden ist, sind die Messwerte stark verfälscht 
+und die resultierenden Werte für die Wärmekapazitäten somit unbrauchbar.\\
 
 Der Vergleich des Mittelwerts der experimentell ermittelten Debye-Tempartur $\bar{\theta_\text{D}}$ mit dem Theoriewert 
 $\theta_\text{D,theo.}$ liefert mit 
@@ -10,4 +12,4 @@ $\theta_\text{D,theo.}$ liefert mit
     x = \frac{|\theta_\text{D,theo.}-\bar{\theta_\text{D}}|}{|\theta_\text{D,theo.}|}\cdot \SI{100}{\percent}
 \end{equation*}
 
-einen relativen Fehler von... was unter unter Berücksichtungung der Messfehler ein akzeptables Ergebnis ist. 
+einen relativen Fehler $\SI{390}{\percent}$ was dem Vergessenen Abpumpen zu zuschreiben ist. 
