--- a/V21/content/theorie.tex
+++ b/V21/content/theorie.tex
@@ -2,3 +2,8 @@
 \label{sec:Theorie}
 
 \cite{sample}
+
+\begin{equation}
+    B = \mu_0 \frac{8IN}{\sqrt{125}R}\,.
+    \label{eqn:helm}
+\end{equation}
